--- a/Andriod/StudentsHelper/app/src/main/res/values/strings.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="exit_text">Вихід</string>
     <string name="more_sleep">Тобі слід більше відпочивати!</string>
     <string name="you_sleep">Твій середній час сну: 6 годин</string>
+    <string name="description">Деякий опис якоїсь новини</string>
+    <string name="news_more">Більше</string>
+    <string name="title">Новина</string>
 </resources>
