--- a/Andriod/StudentsHelper/app/src/main/res/values/strings.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="exit_text">Вихід</string>
     <string name="more_sleep">Тобі слід більше відпочивати!</string>
     <string name="you_sleep">Твій середній час сну: 6 годин</string>
-    <string name="title">blla</string>
-    <string name="description">bla</string>
+    <string name="title">PhTL</string>
+    <string name="description">Bazovski</string>
     <string name="news_more">bla</string>
     <string name="tanutanu1">Гурток бальних танців попереджає, що заняття.. Читати далі...</string>
 </resources>
