--- a/Andriod/StudentsHelper/app/src/main/res/values/strings.xml
+++ b/Andriod/StudentsHelper/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="lorem">Увага! Через небезпечну ситуацію в...</string>
-    <string name="news_text">Новини</string>
+    <string name="news_text">Мій профіль</string>
     <string name="schedules_text">Розклад</string>
     <string name="chat_text">Чати</string>
     <string name="subject_name">Дискретна математика</string>
